revert comp vers for j11