@@ -8,11 +8,11 @@
     <artifactId>main-daimTs</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-<!--    <properties>-->
-<!--        <maven.compiler.source>8</maven.compiler.source>-->
-<!--        <maven.compiler.target>8</maven.compiler.target>-->
+    <properties>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 <!--        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
-<!--    </properties>-->
+    </properties>
 
     <dependencies>
 
@@ -47,6 +47,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>3.2.2</version>
+<!--                    <configuration>-->
+<!--                        <testFailureIgnore>true</testFailureIgnore>-->
+<!--                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
+<!--                        <reuseForks>false</reuseForks>-->
+<!--                    </configuration>-->
                 </plugin>
 
             </plugins>
